--- a/package.json
+++ b/package.json
@@ -5,26 +5,21 @@
   "version": "0.0.1",
   "scripts": {
     "autoformat": "prettier --trailing-comma es5 --write './src/**/*.{js,jsx}'",
-    "build": "webpack --progress --colors"
+    "build": "babel ./src/ --out-dir ./dist"
   },
   "main": "dist/index.js",
-  "dependencies": {
-    "@snakesilk/engine": ">=0.12.0"
-  },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-plugin-inline-react-svg": "^0.4.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.1"
+    "react": "^15.6.1"
   },
   "peerDependencies": {
+    "@snakesilk/engine": ">=0.12.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1"
   }
