--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "main": "dist/index.js",
   "dependencies": {
+    "desensitize-mousemove": "^0.1.3",
     "react-full-screen": "^0.0.2"
   },
   "devDependencies": {
