--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "dist/index.js",
   "dependencies": {
     "desensitize-mousemove": "^0.1.3",
-    "react-full-screen": "^0.0.2"
+    "react-full-screen": "0.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
